--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Britney's Form</h1>
     <br/>
 
-    <form name="contact" method="POST" data-netify="true" onSubmit="submit">
+    <form name="contact" method="POST" data-netlify="true" onSubmit="submit">
     
     <label for="name">Full Name: </label>
     <input type="text" id="name" name="name"/>
