--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <form name="contact" method="POST" data-netlify="true" onSubmit="submit">
     
-    <label for="name">Full Name: </label>
+    <label for="name">Last Name: </label>
     <input type="text" id="name" name="name"/>
     
     <label for="email">Email: </label>
